# MedGemma

./: .gitignore  Makefile  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260224_0001_baseline.py
backend/app/: main.py
backend/app/agents/: critic.py  researcher.py  simulator.py
backend/app/api/: routes_chat.py  routes_runs.py
backend/app/db/: sqlite.py
backend/app/graph/: langgraph_pipeline.py  state.py  workflow.py
backend/app/models/: schemas.py  types.py
backend/app/rag/: ingest_pubmed.py  retriever.py  validate_corpus.py
backend/app/safety/: comorbidity_policy.py  rules_engine.py
backend/app/services/: medgemma.py  population_map.py  settings.py
backend/app/sim/: coarse_engine.py  high_fidelity_engine.py
backend/scripts/: benchmark_runs.py
backend/tests/: conftest.py  test_api_integration.py  test_chat_negative.py  test_coarse_engine.py  test_comorbidity_policy.py  test_critic_blackbox_warning.py  test_migration_guard.py  test_performance_profiles.py  test_population_map_consistency.py  test_researcher.py  test_resume_checkpoint.py  test_rules_engine.py  test_sse_ordering.py
docs/: 00_domain_primer.md  01_architecture_explained.md  02_simulation_math.md  03_judge_qa_sheet.md  04_demo_script.md
frontend/: README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
scripts/: bootstrap.sh  capture_screenshots.sh  dev.sh
submission/: impact_calc.md  judge_qa.md  pitch_deck.md  pitch_speaker_notes.md  video_script.md  (+1 more)
(+22 files in other folders)
